Organização resource Design

--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/JogoDaVelhaMaratona.UWP.csproj
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/JogoDaVelhaMaratona.UWP.csproj
@@ -111,6 +111,7 @@
     <None Include="JogoDaVelhaMaratona.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="facebooklogo.png" />
     <Content Include="folhajogo1.png" />
     <Content Include="folhajogo2.png" />
     <Content Include="tictactoe.png" />
