Adicionado Imagem e nome do perfil do facebook

--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/JogoDaVelhaMaratona.UWP.csproj
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/JogoDaVelhaMaratona.UWP.csproj
@@ -99,6 +99,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Authentication\AuthenticationService.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -165,6 +166,7 @@
       <Name>JogoDaVelhaMaratona</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
