--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.Android/packages.config
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.Android/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile.Client" version="3.1.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid71" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid71" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
