--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/project.json
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
+    "Microsoft.Azure.Mobile.Client": "3.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
+    "Xam.Plugins.Settings": "2.5.8",
     "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
