--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.Android/packages.config
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.Android/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid71" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
