--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/JogoDaVelhaMaratona.UWP.csproj
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/JogoDaVelhaMaratona.UWP.csproj
@@ -116,6 +116,7 @@
     <Content Include="folhajogo1.png" />
     <Content Include="folhajogo2.png" />
     <Content Include="home.png" />
+    <AndroidResource Include="icon.png" />
     <Content Include="tictactoe.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
