--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona/packages.config
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
