--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/project.json
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.UWP/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Microsoft.Azure.Mobile.Client": "3.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
+    "WindowsAzure.Messaging.Managed": "0.1.7.9",
     "Xam.Plugins.Forms.ImageCircle": "1.8.1",
     "Xam.Plugins.Settings": "2.5.8",
     "Xamarin.Forms": "2.3.4.247"
