Android register notification on MainActivity

--- a/JogoDaVelhaMaratona/JogoDaVelhaMaratona.Android/Properties/AndroidManifest.xml
+++ b/JogoDaVelhaMaratona/JogoDaVelhaMaratona.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="j.j">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="jogodavelha.xamarin">
 	<uses-sdk android:minSdkVersion="19" />
-	<application android:label="JogoDaVelhaMaratona.Android" android:icon="@drawable/tictactoe"></application>
+	<application android:label="JogoDaVelhaMaratona.Android" android:icon="@drawable/iconapp"></application>
 </manifest>
